2008-01-25  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Damien Carberry <damien.carberry@sun.com>

	* Makefile.am: determine correct nautilus extension dir via
	pkgconfig (#505364)

2007-12-24  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am: Install the nautilus extension in the right spot.
	(#505364)

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* apply-font.glade: don't mark padding string as translatable (bug
	#502087)

2007-11-23  Frederic Crozat  <fcrozat@mandriva.com>

	* themus-theme-applier.desktop.in.in: Fix .desktop to be valid (bug
	#434956)

2007-11-11  Jens Granseuer  <jensgr@gmx.net>

	* theme-method.c: (theme_changed_callback): adapt to callback change

2007-10-31  Kjartan Maraas  <kmaraas@gnome.org>

	* theme-method.c: (invoke_monitors): ANSIfication of
	function declaration.

2007-10-28  Jens Granseuer  <jensgr@gmx.net>

	* theme-method.c: (theme_changed_callback): adapt to modified
	callback signature

2007-07-28  Jens Granseuer  <jensgr@gmx.net>

	* theme-method.c: (do_close), (do_unlink), (invoke_monitors),
	(theme_changed_callback), (vfs_module_init): update to match theme
	callback signature; invoke_monitors looks icky, though (the uri arg
	was ignored)

2007-07-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: link to $XCURSOR_LIBS, not GNOMECC_CAPPLETS_LIBS.

2007-07-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: added missing libs (for xcursor).

2007-07-05  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnailer.c: (main): call g_thread_init

2007-06-06  Denis Washington  <denisw@svn.gnome.org>

	* theme-thumbnailer.c: (main):
	Update for changes in thumbnailer API.

2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnailer.c: (main): update for changes in thumbnailer API

2007-05-19  Sebastien Bacher  <seb128@ubuntu.com>

	* themus-theme-applier.desktop.in.in: use OnlyShowIn=; so the item is 
	not listed in the menu editor (Closes: #434956)

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>
