@@ -1,3 +1,8 @@
+2008-01-29  Jens Granseuer  <jensgr@gmx.net>
+
+	* themus-properties-view.c: (add_atk_relation): don't leak the ATK
+	relation set (bug #509240)
+
 2008-01-25  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Damien Carberry <damien.carberry@sun.com>
